{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 28,
  "lineage": "e0921fa6-19bc-a1db-b87f-78068ba8a2e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c64258acbb0058c9",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0de77b0242ab818ae",
            "domain": "vpc",
            "id": "eipalloc-0c64258acbb0058c9",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a90db7743fc1a399",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-111-193-60.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.193.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Prod-GW",
            "aws_network_interface.Prod-Interface",
            "aws_security_group.Prod-SG",
            "aws_subnet.Subnet-1",
            "aws_vpc.Prod-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Prod-Web-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:246840139278:instance/i-06c5395140f9f7130",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c5395140f9f7130",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key-D$",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0a90db7743fc1a399"
              }
            ],
            "primary_network_interface_id": "eni-0a90db7743fc1a399",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.111.193.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-023d1a3fad23fb1f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f863a5aeb0b5bd2",
            "tags": {
              "Name": "Ubuntu-D$"
            },
            "tags_all": {
              "Name": "Ubuntu-D$"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d6d1dbe1155d247"
            ]
          },
          "dependencies": [
            "aws_network_interface.Prod-Interface"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Prod-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246840139278:internet-gateway/igw-0b89eccd23b8d5c95",
            "id": "igw-0b89eccd23b8d5c95",
            "owner_id": "246840139278",
            "tags": {
              "Name": "GW-D$"
            },
            "tags_all": {
              "Name": "GW-D$"
            },
            "vpc_id": "vpc-029d352da85da6873"
          },
          "dependencies": [
            "aws_vpc.Prod-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "Prod-Interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246840139278:network-interface/eni-0a90db7743fc1a399",
            "id": "eni-0a90db7743fc1a399",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:9d:3c:8d:03:00",
            "owner_id": "246840139278",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09d6d1dbe1155d247"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f863a5aeb0b5bd2"
          },
          "dependencies": [
            "aws_security_group.Prod-SG",
            "aws_subnet.Subnet-1",
            "aws_vpc.Prod-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prod-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246840139278:route-table/rtb-090a136d3f7b4f033",
            "id": "rtb-090a136d3f7b4f033",
            "owner_id": "246840139278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b89eccd23b8d5c95",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b89eccd23b8d5c95",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-D$"
            },
            "tags_all": {
              "Name": "RT-D$"
            },
            "timeouts": null,
            "vpc_id": "vpc-029d352da85da6873"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Prod-GW",
            "aws_vpc.Prod-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036bee9337bc2131c",
            "route_table_id": "rtb-090a136d3f7b4f033",
            "subnet_id": "subnet-02f863a5aeb0b5bd2"
          },
          "dependencies": [
            "aws_internet_gateway.Prod-GW",
            "aws_route_table.Prod-rt",
            "aws_subnet.Subnet-1",
            "aws_vpc.Prod-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Prod-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246840139278:security-group/sg-09d6d1dbe1155d247",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d6d1dbe1155d247",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "246840139278",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow-web"
            },
            "tags_all": {
              "Name": "Allow-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-029d352da85da6873"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Prod-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246840139278:subnet/subnet-02f863a5aeb0b5bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f863a5aeb0b5bd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246840139278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-D$"
            },
            "tags_all": {
              "Name": "Subnet-D$"
            },
            "vpc_id": "vpc-029d352da85da6873"
          },
          "dependencies": [
            "aws_vpc.Prod-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Prod-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246840139278:vpc/vpc-029d352da85da6873",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b6629dbd745c7fe",
            "default_route_table_id": "rtb-0369b55c5e443f60b",
            "default_security_group_id": "sg-06848278b9bf0866a",
            "dhcp_options_id": "dopt-bcf254d7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-029d352da85da6873",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0369b55c5e443f60b",
            "owner_id": "246840139278",
            "tags": {
              "Name": "VPC-D$"
            },
            "tags_all": {
              "Name": "VPC-D$"
            }
          }
        }
      ]
    }
  ]
}